--- a/capstone1/predict.ipynb
+++ b/capstone1/predict.ipynb
@@ -2,50 +2,109 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-12-14 14:26:54.144142: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-12-14 14:26:54.649156: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-12-14 14:26:54.649202: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2022-12-14 14:26:56.120947: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2022-12-14 14:26:56.121048: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2022-12-14 14:26:56.121059: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import tensorflow.lite as tflite\n",
+    "from keras_image_helper import create_preprocessor\n",
+    "import pickle\n",
     "import numpy as np\n",
     "\n",
-    "import tensorflow as tf\n",
-    "from tensorflow import keras\n"
+    "preprocessor = create_preprocessor('xception', target_size=(224, 224))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-12-14 14:27:26.958065: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
-      "2022-12-14 14:27:26.958443: W tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:265] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2022-12-14 14:27:26.958488: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (bi): /proc/driver/nvidia/version does not exist\n",
-      "2022-12-14 14:27:26.959482: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "INFO: Created TensorFlow Lite XNNPACK delegate for CPU.\n"
      ]
     }
    ],
    "source": [
-    "model = keras.models.load_model('model_v1_07_0.936.h5')"
+    "interpreter = tflite.Interpreter(model_path='model_0.936.tflite')\n",
+    "interpreter.allocate_tensors()\n",
+    "\n",
+    "input_index = interpreter.get_input_details()[0]['index']\n",
+    "output_index = interpreter.get_output_details()[0]['index']"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "with open(\"classes\", \"rb\") as fp:   # Unpickling\n",
+    "    classes = pickle.load(fp)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "outputs": [],
+   "source": [
+    "url = 'https://glorypets.ru/wp-content/uploads/2020/07/1-tsarstvennost.jpg'\n",
+    "# url = 'https://sun9-79.userapi.com/c11422/u1430261/148960630/x_b6d7669e.jpg'\n",
+    "\n",
+    "def predict(url):\n",
+    "    X = preprocessor.from_url(url)\n",
+    "\n",
+    "    interpreter.set_tensor(input_index, X)\n",
+    "    interpreter.invoke()\n",
+    "    preds = interpreter.get_tensor(output_index)\n",
+    "\n",
+    "    ind = np.argpartition(preds[0], -2)[-2:]\n",
+    "    # print('ind', ind)\n",
+    "    print(np.diff(preds[0][ind]))\n",
+    "    if np.diff(preds[0][ind]) > 0.8: # if clear the breed\n",
+    "        return classes[np.argmax(preds[0])], np.max(preds)\n",
+    "    else: # half breed\n",
+    "        h_breed = {}\n",
+    "        for i in ind:\n",
+    "            # print(i)\n",
+    "            h_breed[classes[i]]=preds[0][i]\n",
+    "        # h_breed = dict(zip(classes, preds[0]))\n",
+    "        return h_breed\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.9874433]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "('Doberman', 0.9903132)"
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict(url)"
    ],
    "metadata": {
     "collapsed": false
