--- a/capstone1/train.ipynb
+++ b/capstone1/train.ipynb
@@ -391,11 +391,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "outputs": [],
    "source": [
+    "import tensorflow as tf\n",
     "from tensorflow.keras.applications.xception import preprocess_input\n",
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "import pickle"
    ],
    "metadata": {
     "collapsed": false
@@ -403,22 +405,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-12-14 14:32:24.743935: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
-      "2022-12-14 14:32:24.743975: W tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:265] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2022-12-14 14:32:24.744005: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (bi): /proc/driver/nvidia/version does not exist\n",
-      "2022-12-14 14:32:24.744342: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "execution_count": 13,
+   "outputs": [],
    "source": [
-    "model = keras.models.load_model('model_v1_07_0.936.h5')"
+    "model = tf.keras.models.load_model('model_v1_07_0.936.h5')"
    ],
    "metadata": {
     "collapsed": false
@@ -426,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "path = './archive/'\n",
@@ -438,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -463,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "classes = valid_dataset.class_indices"
@@ -474,10 +464,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "outputs": [],
    "source": [
-    "classes = list(classes.keys())"
+    "classes = list(classes.keys())\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [],
+   "source": [
+    "with open(\"classes\", \"wb\") as fp:   #Pickling\n",
+    "    pickle.dump(classes, fp)"
    ],
    "metadata": {
     "collapsed": false
@@ -498,6 +500,26 @@
    ],
    "source": [
     "classes[34]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['Afghan',\n 'African Wild Dog',\n 'Airedale',\n 'American  Spaniel',\n 'American Hairless',\n 'Basenji',\n 'Basset',\n 'Beagle',\n 'Bearded Collie',\n 'Bermaise',\n 'Bichon Frise',\n 'Blenheim',\n 'Bloodhound',\n 'Bluetick',\n 'Border Collie',\n 'Borzoi',\n 'Boston Terrier',\n 'Boxer',\n 'Bull Mastiff',\n 'Bull Terrier',\n 'Bulldog',\n 'Cairn',\n 'Chihuahua',\n 'Chinese Crested',\n 'Chow',\n 'Clumber',\n 'Cockapoo',\n 'Cocker',\n 'Collie',\n 'Corgi',\n 'Coyote',\n 'Dalmation',\n 'Dhole',\n 'Dingo',\n 'Doberman',\n 'Elk Hound',\n 'French Bulldog',\n 'German Sheperd',\n 'Golden Retriever',\n 'Great Dane',\n 'Great Perenees',\n 'Greyhound',\n 'Groenendael',\n 'Irish Spaniel',\n 'Irish Wolfhound',\n 'Japanese Spaniel',\n 'Komondor',\n 'Labradoodle',\n 'Labrador',\n 'Lhasa',\n 'Malinois',\n 'Maltese',\n 'Mex Hairless',\n 'Newfoundland',\n 'Pekinese',\n 'Pit Bull',\n 'Pomeranian',\n 'Poodle',\n 'Pug',\n 'Rhodesian',\n 'Rottweiler',\n 'Saint Bernard',\n 'Schnauzer',\n 'Scotch Terrier',\n 'Shar_Pei',\n 'Shiba Inu',\n 'Shih-Tzu',\n 'Siberian Husky',\n 'Vizsla',\n 'Yorkie']"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classes"
    ],
    "metadata": {
     "collapsed": false
@@ -610,13 +632,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 21,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Doberman\n"
+     "ename": "NameError",
+     "evalue": "name 'ind' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[0;32m/tmp/ipykernel_15936/409652530.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0;32mfor\u001B[0m \u001B[0mi\u001B[0m \u001B[0;32min\u001B[0m \u001B[0mind\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      2\u001B[0m     \u001B[0;32mif\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mdiff\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mpreds\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m0\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mind\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m<\u001B[0m \u001B[0;36m0.3\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0;31m# if half - breed\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      3\u001B[0m         \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mclasses\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mi\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mpreds\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m0\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mi\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      4\u001B[0m     \u001B[0;32melse\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m         \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mclasses\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0margmax\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mpreds\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m0\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mpreds\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m0\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mind\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'ind' is not defined"
      ]
     }
    ],
@@ -625,9 +651,75 @@
     "    if np.diff(preds[0][ind]) < 0.3: # if half - breed\n",
     "        print(classes[i], preds[0][i])\n",
     "    else:\n",
-    "        print(classes[np.argmax(preds[0])])\n",
+    "        print(classes[np.argmax(preds[0])], preds[0][ind])\n",
     "        break"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Convert Keras to TF-Lite"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 40). These functions will not be directly callable after loading.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: /tmp/tmpg0untlh2/assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: /tmp/tmpg0untlh2/assets\n",
+      "2022-12-15 15:52:39.092704: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:362] Ignored output_format.\n",
+      "2022-12-15 15:52:39.092760: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:365] Ignored drop_control_dependency.\n",
+      "2022-12-15 15:52:39.095696: I tensorflow/cc/saved_model/reader.cc:45] Reading SavedModel from: /tmp/tmpg0untlh2\n",
+      "2022-12-15 15:52:39.122918: I tensorflow/cc/saved_model/reader.cc:89] Reading meta graph with tags { serve }\n",
+      "2022-12-15 15:52:39.122962: I tensorflow/cc/saved_model/reader.cc:130] Reading SavedModel debug info (if present) from: /tmp/tmpg0untlh2\n",
+      "2022-12-15 15:52:39.208030: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:357] MLIR V1 optimization pass is not enabled\n",
+      "2022-12-15 15:52:39.238354: I tensorflow/cc/saved_model/loader.cc:229] Restoring SavedModel bundle.\n",
+      "2022-12-15 15:52:40.067835: I tensorflow/cc/saved_model/loader.cc:213] Running initialization op on SavedModel bundle at path: /tmp/tmpg0untlh2\n",
+      "2022-12-15 15:52:40.233188: I tensorflow/cc/saved_model/loader.cc:305] SavedModel load for tags { serve }; Status: success: OK. Took 1138169 microseconds.\n",
+      "2022-12-15 15:52:40.686509: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:268] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n"
+     ]
+    }
+   ],
+   "source": [
+    "converter = tf.lite.TFLiteConverter.from_keras_model(model)\n",
+    "\n",
+    "tflite_model = converter.convert()\n",
+    "\n",
+    "with open('model_0.936.tflite', 'wb') as f_out:\n",
+    "    f_out.write(tflite_model)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
