--- a/capstone1/predict.ipynb
+++ b/capstone1/predict.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 166,
    "metadata": {
     "collapsed": true
    },
@@ -18,16 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Created TensorFlow Lite XNNPACK delegate for CPU.\n"
-     ]
-    }
-   ],
+   "execution_count": 167,
+   "outputs": [],
    "source": [
     "interpreter = tflite.Interpreter(model_path='model_0.936.tflite')\n",
     "interpreter.allocate_tensors()\n",
@@ -41,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 168,
    "outputs": [],
    "source": [
     "with open(\"classes\", \"rb\") as fp:   # Unpickling\n",
@@ -53,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 169,
    "outputs": [],
    "source": [
     "url = 'https://glorypets.ru/wp-content/uploads/2020/07/1-tsarstvennost.jpg'\n",
@@ -68,9 +60,9 @@
     "\n",
     "    ind = np.argpartition(preds[0], -2)[-2:]\n",
     "    # print('ind', ind)\n",
-    "    print(np.diff(preds[0][ind]))\n",
+    "    # print(np.diff(preds[0][ind]))\n",
     "    if np.diff(preds[0][ind]) > 0.8: # if clear the breed\n",
-    "        return classes[np.argmax(preds[0])], np.max(preds)\n",
+    "        return {classes[np.argmax(preds[0])]: np.max(preds)}\n",
     "    else: # half breed\n",
     "        h_breed = {}\n",
     "        for i in ind:\n",
@@ -85,20 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 170,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.9874433]\n"
-     ]
-    },
-    {
      "data": {
-      "text/plain": "('Doberman', 0.9903132)"
+      "text/plain": "{'Doberman': 0.9903132}"
      },
-     "execution_count": 155,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
